# aadl2rust

./: .gitignore  Cargo.toml  README.md  justfile  package-lock.json  package.json
AADLSource/: aadl_code_loc_by_folder.csv
AADLSource/aocs/: aocs.aadl  dataaocs.aadl
AADLSource/car/: icd.aadl  (+5 more)
aadl_parser/: AADLSource.7z  Cargo.toml  generate_main.rs  generate_main2.rs  generate_main3.rs  generate_pingpong.rs  generate_pingpongv2.rs  generate_rma.rs  generate_toy.rs  ojr_pingpong_queued.rs  output.rs  output_ocarina.rs  pingpong.aadl  pingpong_ocarina.aadl  rustast.txt  rustast0.txt  test_multi_cpu.aadl
cjcar/: Cargo.toml
codegen_test_subpro/: Cargo.toml
compiler/: .gitignore  Cargo.toml  Makefile  justfile
model_eval/: Cargo.toml
pingpongcallc/: Cargo.toml  build.rs
rmatest/: Cargo.toml  build.rs
robottest/: Cargo.toml
scripts/: aadl_loc_by_folder_csv.sh  aadl_loc_table.sh  rust_loc_by_project_csv.sh
src/: aadl.pest  ast.rs  build_project_tool.rs  lib.rs  main.rs  model_statistics.rs  printmessage.rs  test_mod.rs  transform.rs  transform_annex.rs
syn_test/: Cargo.toml  generated.rs
test/car/: Cargo.toml  log.txt
test/car/c_src/: ping.c
test/car/src/: aadlbook_devices.rs  aadlbook_icd.rs  aadlbook_integration.rs  aadlbook_software_entertainment.rs  aadlbook_software_image_acquisition.rs  aadlbook_software_obstacle_detection.rs  aadlbook_software_panel_control.rs  aadlbook_software_speed_controller.rs  aadlbook_software_speed_voter.rs  common_traits.rs  lib.rs  main.rs
test_gen/: Cargo.toml
tests/: all_aadl_models.rs
toytest/: Cargo.toml
(+599 files in other folders)
