[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.8"
pest_derive = "2.8"
pest_debugger = "2.8"

prettyprint = "0.8"

syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
prettyplease = "0.2"

proc-macro2 = "1.0"

chrono = "0.4" 

once_cell = "1.19" 

lazy_static = "1.4"

fixed = "1.24"

crossbeam-channel = "0.5"

pretty_assertions = "1.4.1"


diffy = "0.4.2"
open = "5.3.3"

clap = { version = "4", features = ["derive"] }

regex = "1.10"