[package]
name = "car"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.65"

[dependencies]
libc = "0.2"
lazy_static = "1.4"
crossbeam-channel = "0.5"

rand = "0.7"
tokio = { version = "1.40", features = ["sync"] }